# RedChain

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: dryrun_engagement.md
src/redchain/: __init__.py  __main__.py  cli.py
src/redchain/_fixtures/: __init__.py  network_analyst.json  planner.json  report_writer.json
src/redchain/agents/: __init__.py  base.py  network_analyst.py  planner.py
src/redchain/gates/: __init__.py  base.py  recon_gate.py  report_gate.py  scope_gate.py
src/redchain/integrations/: __init__.py  base.py  nmap.py
src/redchain/phases/: __init__.py  base.py  recon.py  report.py  scope.py
src/redchain/presets/: __init__.py  webapp.yaml
src/redchain/runtime/: __init__.py  agent_session.py  artifacts.py  orchestrator.py  state.py
src/redchain/skills/: __init__.py  base.py  recon_osint.py
src/redchain/templates/: __init__.py  executive_report.md.j2  recon_dossier.md.j2  scope_brief.md.j2
src/redchain/vulnref/: __init__.py  patterns.json
tests/: conftest.py  test_gates.py  test_orchestrator_dryrun.py  test_state.py
